--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,17 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build da Imagem Docker
+      uses: docker/build-push-action@v5.3.0
+      with:
+        context: ./src
+        file: ./src/Dockerfile
+        push: true
+        tags: | 
+          engenheiromuniz/aula-primeira-pipeline:v${{ github.run_number }} 
+          engenheiromuniz/aula-primeira-pipeline:latest 
+
+
+ 
+         
